# My-personal-discord-moderation-bot

./: .env.example  .gitignore  .replit  Procfile  Procfile.alt  README.md  app.json  bot.py  demo_addmod.py  main.py  main_backup.py  main_flask.py  pyproject.toml  replit.md  requirements-minimal.txt  requirements.txt  roblox_alts.py  run.py  sample.env  start.bat  start.sh  test_keep_alive.py  test_trigen.py  test_weather_zip.py  test_webserver.py
cogs/: _admin_alt.py.bak  _admin_backup.py.bak  _admin_new.py.bak  admin.py  admin_alt.py  admin_backup.py  moderation.py  utility.py  utility.py.new  utility.py.tmp  utility_backup.py  utility_new.py
data/: alt_whitelist.json  bot_status.json  mod_whitelist.json  prefixes.json
utils/: handle_command_error.py  logging_config.py  permissions.py
