[project]
name = "slice-moderation-bot"
version = "1.0.0"
description = "Discord moderation bot with comprehensive admin and utility commands"
requires-python = ">=3.11,<3.13"
dependencies = [
    "discord-py>=2.5.2",
    "python-dotenv>=1.1.1",
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["cogs", "utils"]
